# dotfiles

./: .buildinfo  .buildinfo.bak  .chezmoiignore  .dockerignore  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README.rst  Readme.rst  add_externally_modified_files.sh  add_neovim_config.sh  dot_gitconfig  dot_gitconfig_USH-LP19-RIX1  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  symlink_dot_bash_profile  symlink_dot_bashrc  symlink_dot_gitconfig.tmpl  symlink_dot_tmux.conf  tmux.conf
.doctrees/: environment.pickle  index.doctree
.doctrees/explanation/: bash.doctree  docker-harness-scripts.doctree  fish.doctree  git-scripts.doctree  git-workflow.doctree  git.doctree  index.doctree  lazygit.doctree  manage-tool-manifest.doctree  tmux.doctree  tool-manifest-schema.doctree
.doctrees/how-to/: gen-docs.doctree  index.doctree  publish-docs.doctree  run-docker-workflow.doctree  (+3 more)
_sources/: index.rst.txt
bash/: bash_profile  bashrc  bashrc-custom  bashrc-custom-git  bashrc-wsl  powerline-go  profile
docs/: conf.py  index.rst
dot-bash/: bash_profile  bashrc  bashrc-custom  bashrc-custom-fzf  bashrc-custom-invoke  bashrc-wsl  powerline-go  profile
dot-tmux/: tmux.conf
dot-vim/: plugins.vim  settings.vim  ubuntu.vim
explanation/: bash.html  docker-harness-scripts.html  fish.html  git-scripts.html  git-workflow.html  git.html  index.html  lazygit.html  manage-tool-manifest.html  tmux.html  tool-manifest-schema.html
home/: .chezmoiignore  dot_gitconfig_vvnraman  symlink_dot_gitconfig.tmpl  symlink_dot_profile  symlink_dot_vimrc
how-to/: gen-docs.html  index.html  publish-docs.html  run-docker-workflow.html  setup-chezmoi.html  sync-nvim-config.html  update-tools-manifest.html
intro/: getting-started.html  index.html  overview.html  pre-requisites.html
journal/: 2022.html  2025.html  index.html
python/: README.rst  dotfiles-config.ini  pyproject.toml
python/scripts/: install_tool.py  install_tool_lib.py
python/src/dotfiles/: dotfiles-config.ini  git.py  logging_config.py  main.py  nvim.py  paths.py  publish.py  run_command.py  tool_install.py  util.py
python/src/dotfiles/sphinxext/: __init__.py  help_generator.py  layout_generator.py
python/tests/: test_nvim_mutation_orchestration.py  test_nvim_pure_logic.py  test_paths_pure_logic.py
reference/: chezmoi.html  index.html  templates.html
tmux/: tmux.conf
tutorials/: index.html
vim/: autocommands.vim  functions.vim  mappings.vim  plugins.vim  ubuntu.vim
(+480 files in other folders)
