[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "My dotfiles"
authors = ["Your Name <you@example.com>"]
license = "BSD 2 Clause"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
sphinxemoji = "^0.2.0"
sphinx-tabs = "^3.3.1"
sphinxcontrib-mermaid = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
